<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EvaluaMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="example">Example action</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="new_subject">Add Subject</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create_subject">Create Subject</string>
    <string name="delete_subject">Delete Subject</string>
    <string name="delete_subject_confirmation">Are you sure to delete this subject?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_score">New Score</string>
    <string name="score">Score</string>
    <string name="value">Value</string>
    <string name="create_test">Create Mark</string>
    <string name="stats">Stats</string>
    <string name="error_max_score">The score must be less than 10</string>
    <string name="exams">Exams</string>
    <string name="average">Average</string>
    <string name="ratio">Ratio</string>
    <string name="date">Date</string>>

    <string name="error_name">Error on name</string>
    <string name="edit_test">Edit Mark</string>
    <string name="weighted_average">Weighted Average</string>
    <string name="action_edit">Edit</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="chart">Chart</string>
    <string name="over_ten">Over 10</string>
    <string name="error_empty_field">Complete all fields</string>
    <string name="type">Type</string>
    <string name="card_empty_cardwithlist_text">No upcoming exams</string>
    <string name="days_left">days left</string>
    <string name="action_starred">Starred</string>
    <string name="starred_subjects">Starred Subjects</string>
    <string name="upcoming_exams">Upcoming Marks</string>
    <string name="star_subject_suggest">You can star subjets to show here.</string>
    <string name="delete_mark_confirmation">Are you sure to delete this mark?</string>
    <string name="fail_name">Enter Name</string>
    <string name="fail_percent">Enter Percent</string>
    <string name="fail_max_percent">Global percent must be less than 100%</string>
    <string name="delete_mark">Delete Mark</string>
    <string name="home">Home</string>
    <string name="time">Time</string>
    <string name="hours_left">hours left</string>
    <string name="minutes_left">minutes left</string>
    <string name="profile">Profile</string>
    <string name="subjects">Subjects</string>
    <string name="about">About</string>
    <string name="date_error">DD/MM/YYYY</string>
    <string name="time_error">HH/MM</string>
    <string name="value_error">## %</string>
    <string name="score_error">## %</string>
    <string name="app_description">Manage your marks from school, college or university in an easy and simple way!  EvaluaMe allows you to store and manage the qualifications of your subjects.</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="my_account">My Account</string>
    <string name="facebook_app_id">392190444313101</string>
    <string name="twitter_consumer_key">6tef42byALWJl3LKhb13xcpWO</string>
    <string name="twitter_consumer_secret">Q4kYOhMQ3PgfdFelDCC5D3Lq2hylm7lRpPGoQvpk43iNB3nsnF</string>

</resources>
