<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Info"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Info"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/text_view_relative_global"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin">


            <TextView
                android:id="@+id/text_view_dialog_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/value"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_set_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="- - . - - %"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="2" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin">


            <TextView
                android:id="@+id/text_view_dialog_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/type"
                android:textSize="@dimen/text_size_medium"
                android:layout_alignParentLeft="true"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_set_type"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:spinnerMode="dropdown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin">

            <TextView
                android:id="@+id/text_view_dialog_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_set_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="xx-xx-xxxx"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="2" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin">

            <TextView
                android:id="@+id/text_view_dialog_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/time"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_set_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="xx:xx"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin">

            <TextView
                android:id="@+id/text_view_dialog_mark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/score"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_set_mark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="- - . - -"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="2" />

        </TableRow>
    </TableLayout>
</LinearLayout>